Completed the login endpoint and it ready for continuous integration test
