# server/controllers/auth.js
@@ -4,35 +4,32 @@ import jwt from 'jsonwebtoken';
 import _ from 'lodash';
 import Users from '../models/Users';
 import cloudinary from 'cloudinary';
-import { signupSchema } from '../middleware/modelValidation';
+import { signupSchema, signinSchema } from '../middleware/modelValidation';
+
+const jwtSecret = process.env.JWT_SECRET;
 
 class Auth {
   /*
-    @Endpoint /api/
-
-    */
-  async signUp(req, res) {
-    const { body, file } = req;
+@@ Route          /api/v1/auth/signup
+@@ Method         POST
+@@ Description    Create user account
+*/
+  async signUp({ body, file }, res) {
     const errors = Joi.validate(body, signupSchema);
-
-    if (errors.error) {
-      return res
-        .status(400)
-        .json({ status: 'error', error: errors.error.details[0].message });
-    }
+    if (errors.error) return res.status(400).json({ status: 'error', error: errors.error.details[0].message });
 
     let user = Users.find((u) => u.email === body.email);
-    if (user) {
+    if (user)
       return res.status(400).json({
         status: 'error',
         error: 'This email has been registered already'
       });
-    }
 
     try {
       const salt = await bcrypt.genSalt(10);
       const password = await bcrypt.hash(body.password, salt);
-      user = { id: Users.length + 1, ...body, password };
+
+      user = { id: Users.length + 1, ...body, is_admin: false, password };
 
       if (file) {
         const result = await cloudinary.v2.uploader.upload(file.path);
@@ -40,13 +37,39 @@ class Auth {
       }
 
       Users.push(user);
-
-      let data = _.omit(user, ['password']);
-      data.token = await jwt.sign(data, 'jwtsecret', { expiresIn: 3600 });
-
-      return res.status(201).json({ status: 'success', data });
+      user.token = await jwt.sign(_.pick(user, ['id']), jwtSecret, { expiresIn: 3600 });
+      return res.status(201).json({ status: 'success', data: { ..._.omit(user, ['password']) } });
     } catch (error) {
       return res.status(500).json({ status: 'error', error: 'server error' });
+    }
+  }
+
+  /*
+@@ Route          /api/v1/auth/signIn
+@@ Method         POST
+@@ Description    Login a user
+*/
+  async signIn({ body }, res) {
+    try {
+      const errors = Joi.validate(body, signinSchema);
+      if (errors.error) return res.status(400).json({ status: 'error', error: errors.error.details[0].message });
+
+      const user = Users.find((u) => u.email === body.email);
+      if (!user) return res.status(400).json({ status: 'error', error: 'Invalid username and password' });
+
+      const validPassword = await bcrypt.compare(body.password, user.password);
+      if (!validPassword) return res.status(400).json({ status: 'error', error: 'Invalid username and password' });
+
+      const token = await jwt.sign(_.pick(user, ['id']), jwtSecret, {
+        expiresIn: 3600
+      });
+
+      return res.status(200).json({
+        status: 'success',
+        data: { token, ..._.omit(user, ['password']) }
+      });
+    } catch (error) {
+      return res.status(500).json({ status: 'error', error });
     }
   }
 }
