# server/testdata/auth.js
@@ -1,14 +1,13 @@
 // import userImage from './solution2.png';
 
 export const validUser = {
-  email: 'Steve@gmail.com',
+  email: 'steve@gmail.com',
   password: 'secret',
   first_name: 'Steve',
   last_name: 'Okoro',
   phone_number: '08037545637',
   address: '24 Oboro park PH',
-  user_type: 'regular',
-  is_admin: 'false'
+  user_type: 'regular'
 };
 export const duplicateEmail = {
   email: 'john@gmail.com',
@@ -17,8 +16,7 @@ export const duplicateEmail = {
   last_name: 'Okoro',
   phone_number: '08037545637',
   address: '24 Oboro park PH',
-  user_type: 'regular',
-  is_admin: 'false'
+  user_type: 'regular'
 };
 export const validUserWithImage = {
   email: 'godwin@gmail.com',
@@ -27,14 +25,21 @@ export const validUserWithImage = {
   last_name: 'bright',
   phone_number: '08037545637',
   address: '24 Oboro park PH',
-  user_type: 'regular',
-  is_admin: 'false'
+  user_type: 'regular'
 };
+export const validLogin = {
+  email: 'steve@gmail.com',
+  password: 'secret'
+};
+export const invalidPassword = {
+  email: 'steve@gmail.com',
+  password: 'secret4'
+};
+
 export const invalidUser = {
   first_name: 'Steve',
   last_name: 'Okoro',
   phone_number: '08037545637',
   address: '24 Oboro park PH',
-  user_type: 'regular',
-  is_admin: 'false'
+  user_type: 'regular'
 };
